k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs-product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fs-product
  template:
    metadata:
      labels:
        app: fs-product
    spec:
      containers:
        - name: fs-product
          image: 736094578720.dkr.ecr.us-east-1.amazonaws.com/fs-app-product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs-customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fs-customer
  template:
    metadata:
      labels:
        app: fs-customer
    spec:
      containers:
        - name: fs-customer
          image: 736094578720.dkr.ecr.us-east-1.amazonaws.com/fs-app-customer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
